AC_PREREQ(2.65)
AC_INIT([level_generator],
        [1.0.0],
        [daniel.hams@gmail.com])

AC_SUBST(ACLOCAL_AMFLAGS, "-I macros")

AC_CONFIG_SRCDIR(src)
AC_CONFIG_MACRO_DIR(macros)
AC_CONFIG_HEADERS(config.h)
AM_INIT_AUTOMAKE([1.9 dist-bzip2 no-dist-gzip])

ABI_VERSION=1.0
AC_SUBST(ABI_VERSION)
AC_DEFINE_UNQUOTED(ABI_VERSION, "$ABI_VERSION", [ABI version of the package])
PACKAGE_SUFFIX="-${ABI_VERSION}"
AC_SUBST(PACKAGE_SUFFIX)
AC_DEFINE_UNQUOTED(PACKAGE_SUFFIX, "$PACKAGE_SUFFIX", [Suffix of the package])

AC_STDC_HEADERS
AC_PROG_CXX
AC_PROG_LIBTOOL
PKG_PROG_PKG_CONFIG

AC_LANG([C++])

BOOST_VERSION=1.49
BOOST_REQUIRE([$BOOST_VERSION])
BOOST_SMART_PTR
BOOST_PROGRAM_OPTIONS
BOOST_DATE_TIME
BOOST_THREADS

CXXFLAGS="$CXXFLAGS -std=c++11 -O3"

AC_OUTPUT([Makefile
src/Makefile
src/level_generator/Makefile])
